goto-button z-index 2, position fixed

--- a/css-positioning_layout-with-position/css/styles.css
+++ b/css-positioning_layout-with-position/css/styles.css
@@ -44,7 +44,7 @@ body {
   background:  #7fD9E2;
   color: #ffffff;
   height: 48px;
-  position: fixed;
+  position: sticky;
   bottom: 10px;
   padding: 10px;
 }
@@ -98,4 +98,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  bottom: 100px;
+  left: 5px;
+  z-index: 2;
 }
